# DeepPoint-V2-FPGA

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
docs/: analyze.md  aws.md  banks.md  compile.md  datasets.md  debug.md  results.md  tips.md
inc/: CClassifierMultiPlatform.h  CImplementationBase.h  CPlatformSelection.h  CProfiler.h  CStringFormatter.h  CTensorBase.h  CWeightLoader.h  GlobalHelpers.h  cnpy.h
inc/cpu/: CImplementationCpu.h  CTensor.h
inc/fpga/xilinx/: AxiHelper.h  CImplementationXilinx.h  CKernelArg.h  CKernelWrapper.h  CLayerWrapper.h  CTensorXil.h  CXilinxInfo.h  Conv2D.h  ReductionHelper.h  xcl2.h
inc/fpga/xilinx/kernels/: CKernelWrapperBasicOps.h  CKernelWrapperConcat.h  CKernelWrapperConv.h  CKernelWrapperGather.h  CKernelWrapperMatmul.h  CKernelWrapperPadUnpad.h  CKernelWrapperReduce.h  CKernelWrapperReluSqrtSquare.h  CKernelWrapperTile.h  CKernelWrapperTopK.h  CKernelWrapperTranspose.h  Checklist.md
inc/models/: CModel1.h
scripts/: DbgScriptBinDir.sh  DbgScriptBinOclTestDir.sh  KernelFreqSDx20174.tcl.in  LaunchDeepPointV2FPGA.sh.in  LaunchOclTests.sh.in  PasteBinScript.py  PostRoute.tcl  PreRoute.tcl  Report.py  Synthesis.tcl.in  SynthesisScriptLauncherBatch.sh.in  autobuild_hw.sh  autobuild_hwemu.sh  autobuild_swemu.sh  bank_optimizer_v2.py  debug_script.sh  gather_results.sh  kernel_obj.py  sdaccel.ini
src/: CClassifierMultiPlatform.cpp  CImplementationBase.cpp  CPlatformSelection.cpp  CProfiler.cpp  CTensorBase.cpp  CWeightLoader.cpp  GlobalHelpers.cpp  cnpy.cpp  main.cpp
src/cpu/: CImplementationCpu.cpp
src/fpga/xilinx/: CImplementationXilinx.cpp  CKernelArg.cpp  CKernelWrapper.cpp  CLayerWrapper.cpp  xcl2.cpp
src/fpga/xilinx/kernels/: basicops.cpp  concat.cpp  conv2_1x1_direct.cpp  datamover.cpp  gather.cpp  matmul.cpp  matops.cpp  pad_unpad.cpp  reduce.cpp  relu_sqrt_square.cpp  tile.cpp  topk_insertionsort.cpp  topk_mergesort_serial.cpp  topk_mergesortdf_mono.cpp  topk_mergesortdf_pe.cpp  topk_selectionsort.cpp  transpose.cpp
src/models/: CModel1.cpp
test/: CMakeLists.txt
test/common/: test_helpers.h
test/kerneltests/: CMakeLists.txt
test/kerneltests/basicops/: CMakeLists.txt
test/kerneltests/basicops/inc/: GoldBasicOps.h
test/kerneltests/basicops/src/: CpuTestBasicOps.cpp
test/kerneltests/common/inc/: PaddingCpu.h  Utility.h
test/kerneltests/concat/: CMakeLists.txt
test/kerneltests/concat/src/: CpuTestConcat.cpp
test/kerneltests/conv2/: CMakeLists.txt
test/kerneltests/conv2/inc/: Conv2Helper.h
test/kerneltests/conv2/src/: CpuTestConvolution.cpp
test/kerneltests/gather/: CMakeLists.txt
test/kerneltests/gather/src/: CpuTestGather.cpp
test/kerneltests/matmul/: CMakeLists.txt
test/kerneltests/matmul/src/: CpuTestMatmul.cpp
test/kerneltests/matops/: CMakeLists.txt
test/kerneltests/matops/inc/: GoldMatops.h
test/kerneltests/matops/src/: CpuTestMatops.cpp
test/kerneltests/padding/: CMakeLists.txt
test/kerneltests/padding/src/: CpuTestPadding.cpp
test/kerneltests/reducemax/: CMakeLists.txt
test/kerneltests/reducemax/src/: CpuTestReduceMax.cpp
test/kerneltests/reducesum/: CMakeLists.txt
test/kerneltests/reducesum/src/: CpuTestReduceSum.cpp
test/kerneltests/reducesum4d/: CMakeLists.txt
test/kerneltests/reducesum4d/src/: CpuTestReduceSum4D.cpp
test/kerneltests/relu_sqrt_square/: CMakeLists.txt
test/kerneltests/relu_sqrt_square/src/: CpuTestReluSqrtSquare.cpp
test/kerneltests/tile/: CMakeLists.txt
test/kerneltests/tile/src/: CpuTestTile.cpp
test/kerneltests/topk/: CMakeLists.txt
test/kerneltests/topk/src/: CpuTestTopk.cpp
test/kerneltests/transpose/: CMakeLists.txt
test/kerneltests/transpose/src/: CpuTestTranspose.cpp
test/kerneltests/unpadding/: CMakeLists.txt
test/kerneltests/unpadding/src/: CpuTestUnpadding.cpp
test/ocltests/: CMakeLists.txt  tests_main.cpp
test/ocltests/common/: test_helpers.h
test/ocltests/unittests/test_ckwbasicops/: test_ckwbasicops.cpp
test/ocltests/unittests/test_ckwconcat/: test_ckwconcat.cpp
test/ocltests/unittests/test_ckwconv/: test_ckwconv.cpp
test/ocltests/unittests/test_ckwgather/: test_ckwgather.cpp
test/ocltests/unittests/test_ckwmatmul/: test_ckwmatmul.cpp
test/ocltests/unittests/test_ckwpadunpad/: test_ckwpadunpad.cpp
test/ocltests/unittests/test_ckwreduce/: test_ckwreduce.cpp
test/ocltests/unittests/test_ckwrelusqrtsquare/: test_ckwrelusqrtsquare.cpp
test/ocltests/unittests/test_ckwtile/: test_ckwtile.cpp
test/ocltests/unittests/test_ckwtopk/: test_ckwtopk.cpp
test/ocltests/unittests/test_ckwtranspose/: test_ckwtranspose.cpp
test/ocltests/unittests/test_ctensor/: test_ctensor.cpp
test/ocltests/unittests/test_ctensorxil/: test_ctensorxil.cpp
test/ocltests/unittests/test_layermean/: test_layermean.cpp
test/ocltests/unittests/test_layervariance/: test_layervariance.cpp
test/ocltests/unittests/test_multiplatform1/: test_multiplatform1.cpp
test/unittests/test_ctensor/: test_ctensor.cpp
