# To enable kernel stdout for all of the kerneltests below (add_subdirectory)
add_definitions("-DKERNEL_LOGS -DHLSLIB_XILINX")

add_subdirectory("conv2")
add_subdirectory("topk")
#add_subdirectory("topkdf")
add_subdirectory("matops")
add_subdirectory("reducesum4d")
add_subdirectory("reducemax")
add_subdirectory("reducesum")
add_subdirectory("matmul")
add_subdirectory("tile")
add_subdirectory("gather")
add_subdirectory("concat")
add_subdirectory("relu_sqrt_square")
add_subdirectory("transpose")
add_subdirectory("padding")
add_subdirectory("unpadding")